# ib-cs-ml-course

./: .gitignore  README.md  SETUP.md  add_colab_badges.py  main.py  pyproject.toml
bonus/: Bonus_Class_Debate_Kit.ipynb  Bonus_Kaggle_Competition_Journey.ipynb  README.md
resources/: HW_SUBMISSION.md  README.md  glossary.md
week1_fundamentals/: README.md  Week1_Lesson1_Lecture.ipynb  Week1_Lesson2_Workshop.ipynb
week2_supervised/: README.md  Week2_Lesson3_Lecture.ipynb  Week2_Lesson4_Workshop.ipynb
week3_unsupervised/: README.md  Week3_Lesson5_Lecture.ipynb  Week3_Lesson6_Workshop.ipynb
week4_neural_networks/: README.md  Week4_Lesson7_Lecture.ipynb  Week4_Lesson8_Workshop.ipynb
week5_rl_ga_ethics/: README.md  Week5_Lesson10_Workshop.ipynb  Week5_Lesson9_Lecture.ipynb
week6_final_mile/: README.md  Week6_Flashcards.ipynb  Week6_Lesson11_Lecture_LLM.ipynb  Week6_Quiz_Battery.ipynb
