[project]
name = "ib-cs-ml-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0rc2",
    "mlxtend>=0.25.0",
    "numpy>=2.5.0rc1",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.21.0",
]

[dependency-groups]
dev = [
    "jupytext>=1.19.3",
    "nbclient>=0.11.0",
    "nbconvert>=7.17.1",
    "nbdime>=4.0.4",
    "nbformat>=5.10.4",
    "nbmanips>=2.1.3",
    "papermill>=2.7.0",
]
